background color change

--- a/daygrade/src/index.css
+++ b/daygrade/src/index.css
@@ -150,7 +150,7 @@
 @media screen and (min-width: 250px) {
   #light #search {
     /* background-image: url('https://images.unsplash.com/photo-1560780552-ba54683cb263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80'); */
-    background-color: #edeae0;
+    background-color: #e5e4e2;
 
     height: 2300px;
   }
@@ -163,7 +163,7 @@
 @media screen and (min-width: 300px) {
   #light {
     /* background-image: url('https://images.unsplash.com/photo-1560780552-ba54683cb263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80'); */
-    background-color: #edeae0;
+    background-color: #e5e4e2;
 
     height: 950px;
   }
@@ -175,7 +175,7 @@
 
   #light #checkin {
     /* background-image: url('https://images.unsplash.com/photo-1560780552-ba54683cb263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80'); */
-    background-color: #edeae0;
+    background-color: #e5e4e2;
 
     height: 1720px;
   }
@@ -186,7 +186,7 @@
 
   #light #search {
     /* background-image: url('https://images.unsplash.com/photo-1560780552-ba54683cb263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80'); */
-    background-color: #edeae0;
+    background-color: #e5e4e2;
 
     height: 1870px;
   }
@@ -199,7 +199,7 @@
 @media screen and (min-width: 650px) {
   #light {
     /* background-image: url('https://images.unsplash.com/photo-1560780552-ba54683cb263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80'); */
-    background-color: #edeae0;
+    background-color: #e5e4e2;
 
     height: 1050px;
   }
@@ -211,7 +211,7 @@
 
   #light #checkin {
     /* background-image: url('https://images.unsplash.com/photo-1560780552-ba54683cb263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80'); */
-    background-color: #edeae0;
+    background-color: #e5e4e2;
 
     height: 1720px;
   }
@@ -222,7 +222,7 @@
 
   #light #search {
     /* background-image: url('https://images.unsplash.com/photo-1560780552-ba54683cb263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80'); */
-    background-color: #edeae0;
+    background-color: #e5e4e2;
 
     height: 1720px;
   }
@@ -235,7 +235,7 @@
 @media screen and (min-width: 715px) {
   #light {
     /* background-image: url('https://images.unsplash.com/photo-1560780552-ba54683cb263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80'); */
-    background-color: #edeae0;
+    background-color: #e5e4e2;
 
     height: 1050px;
   }
@@ -247,7 +247,7 @@
 
   #light #checkin {
     /* background-image: url('https://images.unsplash.com/photo-1560780552-ba54683cb263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80'); */
-    background-color: #edeae0;
+    background-color: #e5e4e2;
 
     height: 1760px;
   }
@@ -258,7 +258,7 @@
 
   #light #search {
     /* background-image: url('https://images.unsplash.com/photo-1560780552-ba54683cb263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80'); */
-    background-color: #edeae0;
+    background-color: #e5e4e2;
 
     height: 1720px;
   }
@@ -271,7 +271,7 @@
 @media screen and (min-width: 800px) {
   #light {
     /* background-image: url('https://images.unsplash.com/photo-1560780552-ba54683cb263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80'); */
-    background-color: #edeae0;
+    background-color: #e5e4e2;
 
     height: 850px;
   }
@@ -283,7 +283,7 @@
 
   #light #checkin {
     /* background-image: url('https://images.unsplash.com/photo-1560780552-ba54683cb263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80'); */
-    background-color: #edeae0;
+    background-color: #e5e4e2;
 
     height: 1060px;
   }
@@ -294,7 +294,7 @@
 
   #light #search {
     /* background-image: url('https://images.unsplash.com/photo-1560780552-ba54683cb263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80'); */
-    background-color: #edeae0;
+    background-color: #e5e4e2;
 
     height: 1120px;
   }
@@ -307,7 +307,7 @@
 @media screen and (min-width: 930px) {
   #light {
     /* background-image: url('https://images.unsplash.com/photo-1560780552-ba54683cb263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80'); */
-    background-color: #edeae0;
+    background-color: #e5e4e2;
 
     height: 840px;
   }
@@ -319,7 +319,7 @@
 
   #light #checkin {
     /* background-image: url('https://images.unsplash.com/photo-1560780552-ba54683cb263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80'); */
-    background-color: #edeae0;
+    background-color: #e5e4e2;
 
     height: 1060px;
   }
@@ -330,7 +330,7 @@
 
   #light #search {
     /* background-image: url('https://images.unsplash.com/photo-1560780552-ba54683cb263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80'); */
-    background-color: #edeae0;
+    background-color: #e5e4e2;
 
     height: 1060px;
   }
@@ -343,21 +343,21 @@
 @media screen and (min-width: 1025px) {
   #light {
     /* background-image: url('https://images.unsplash.com/photo-1560780552-ba54683cb263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80'); */
-    background-color: #edeae0;
+    background-color: #e5e4e2;
 
     height: 840px;
   }
 
   #light #checkin {
     /* background-image: url('https://images.unsplash.com/photo-1560780552-ba54683cb263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80'); */
-    background-color: #edeae0;
+    background-color: #e5e4e2;
 
     height: 1060px;
   }
 
   #light #search {
     /* background-image: url('https://images.unsplash.com/photo-1560780552-ba54683cb263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80'); */
-    background-color: #edeae0;
+    background-color: #e5e4e2;
 
     height: 1060px;
   }
@@ -381,7 +381,7 @@
 @media screen and (min-width: 300px) {
   #light #dash {
     /* background-image: url('https://images.unsplash.com/photo-1560780552-ba54683cb263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80'); */
-    background-color: #edeae0;
+    background-color: #e5e4e2;
 
     height: 1850px;
   }
@@ -395,7 +395,7 @@
 @media screen and (min-width: 650px) {
   #light #dash {
     /* background-image: url('https://images.unsplash.com/photo-1560780552-ba54683cb263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80'); */
-    background-color: #edeae0;
+    background-color: #e5e4e2;
 
     height: 1850px;
   }
@@ -409,7 +409,7 @@
 @media screen and (min-width: 715px) {
   #light #dash {
     /* background-image: url('https://images.unsplash.com/photo-1560780552-ba54683cb263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80'); */
-    background-color: #edeae0;
+    background-color: #e5e4e2;
 
     height: 1850px;
   }
@@ -423,7 +423,7 @@
 @media screen and (min-width: 930px) {
   #light #dash {
     /* background-image: url('https://images.unsplash.com/photo-1560780552-ba54683cb263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80'); */
-    background-color: #edeae0;
+    background-color: #e5e4e2;
 
     height: 2000px;
   }
@@ -437,7 +437,7 @@
 @media screen and (min-width: 1025px) {
   #light #dash {
     /* background-image: url('https://images.unsplash.com/photo-1560780552-ba54683cb263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80'); */
-    background-color: #edeae0;
+    background-color: #e5e4e2;
 
     height: 1000px;
   }
@@ -776,6 +776,10 @@
 
 #dark #no-logs {
   color: white;
+}
+
+#light #logs {
+ background-color: #F3F0E8;
 }
 
 #light #not-found {
