added !important to each style in the js file

--- a/daygrade/src/index.css
+++ b/daygrade/src/index.css
@@ -10,31 +10,31 @@
 /* background-image: url('https://images.unsplash.com/photo-1533134486753-c833f0ed4866?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80'); */
 /* } */
 
-.MuiDayPicker-monthContainer {
-  width: '80%';
-  max-height: '600px';
-  height: '470px';
+/* .MuiDayPicker-monthContainer {
+  width: 80% !important;
+  max-height: 600px !important;
+  height: 470px !important;
 }
 
-/* .MuiCalendarPicker-root {
-  width: '70%';
-  max-height: '600px';
-  height: '470px';
-} */
+.MuiCalendarPicker-root {
+  width: 70% !important;
+  max-height: 600px !important;
+  height: 470px !important;
+}
 
 .MuiCalendarPicker-viewTransitionContainer,
 .css-sf5t6v-PrivatePickersSlideTransition-root-MuiDayPicker-slideTransition {
-  min-height: 350px;
-  height: auto;
+  min-height: 350px !important;
+  height: auto !important;
 }
 
 .css-qklzlb-MuiDayPicker-header,
 .css-raiqh1-MuiTypography-root-MuiDayPicker-weekDayLabel {
-  height: 70px;
-  width: tileSize;
-  color: blue;
-  font-weight: bold;
-}
+  height: 70px !important;
+  width: 70px !important;
+  color: blue !important;
+  font-weight: bold !important;
+} */
 
 @media screen and (min-width: 200px) {
   #avatar {
