--- a/daygrade/src/index.css
+++ b/daygrade/src/index.css
@@ -27,9 +27,10 @@
   min-height: 350px !important;
   height: auto !important;
 } */
-.MuiTypography-caption {
+
+/* .MuiTypography-caption {
   color: blue !important;
-}
+} */
 
 /* .css-qklzlb-MuiDayPicker-header,
 .css-raiqh1-MuiTypography-root-MuiDayPicker-weekDayLabel {
