--- a/daygrade/src/index.css
+++ b/daygrade/src/index.css
@@ -25,7 +25,7 @@
 .MuiDayPicker-slideTransition {
   min-height: 350px !important;
   height: auto !important;
-  border: solid 1px black;
+  /* border: solid 1px black; */
 }
 
 /* .MuiTypography-caption {
